# mathTorch

./: README.md  README.txt  introduce.py  preprocessing.ipynb  pyproject.toml  requirements.txt  save.yaml  setup.py  test.py
mathTorch/: __init__.py  activation.py  conv.py  linear.py  nn.py
mathTorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mathTorch/neurons/: Layer.py  MathTorch.py  activation.py  conv.py  layer.py  linear.py  run.ipynb  updated_Linear.py
mathTorch/nn/: MathTorch.py  __init__.py  __test__.py  activation.py  conv.py  layer.py  linear.py  networking.py
mathTorch/utils/: __init__.py  fix_dll.py  interface.py  interfaces.py  lightning.py  nlp.py  shape.py  utils.py
